# fullstack-gpt

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cache.db  controllers.py  model.json  notebook.ipynb  parsers.py  pyproject.toml
app/: Home.py  agent.py  consts.py  main.py
app/pages/: DocumentGPT.py  PrivateGPT.py  QuizGPT.py
