[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "Fullstack GPT"
name = "fullstack-gpt"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
python = "~3.11"
langchain = "^0.1.10"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
