[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "Fullstack GPT"
name = "fullstack-gpt"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
python = "~3.11"
langchain = "^0.1.10"
tiktoken = "^0.6.0"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
langchain-openai = "^0.0.8"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
ipykernel = "^6.29.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
