[tool.poetry]
authors = ["Flynn <wphestiraid@gmail.com>"]
description = "Fullstack GPT"
name = "fullstack-gpt"
readme = "README.md"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
python = "~3.11"
langchain = "^0.1.13"
tiktoken = "^0.6.0"
python-dotenv = "^1.0.1"
openai = "^1.14.3"
langchain-openai = "^0.1.1"
networkx = "^3.2.1"
unstructured = "^0.13.0"
chromadb = "^0.4.24"
langsmith = "^0.1.38"
streamlit = "^1.32.2"
faiss-cpu = "^1.8.0"
huggingface-hub = "^0.22.2"
transformers = "^4.40.1"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"
ipykernel = "^6.29.4"
pre-commit = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
